# david_analysis

./: .gitignore  README.md  david_analysis.py  genes.txt  pyproject.toml  requirements.txt  run.sh  run_model.sh  test.txt
src/david_analysis/: __init__.py  __main__.py
