[project]
name = "david-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "VentCat", email = "2546650292@qq.com" }]
dependencies = ["zeep>=4.2.1", "pandas>=2.2.2"]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
david_analysis = "david_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
dev_gene = "rye run david_analysis --input 'genes.txt'"
dev_uniprot = "rye run david_analysis --input 'uniprotids.txt' --identifier 'UNIPROT_ACCESSION'"

[tool.rye]
managed = true
dev-dependencies = []
sources = [
    { name = "tsinghua", url = "https://pypi.tuna.tsinghua.edu.cn/simple" },
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/david_analysis"]
